--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     <a href="#" id="weatherButton"><i class="fas fa-sun"></i> Weather</a>
                     <a href="./transport.html">Plan Your Trip</a>
                     <a href="./accommodations.html">Where to Stay</a>
-                    <a href="./activities">Things to Do</a>
+                    <a href="./activities.html">Things to Do</a>
                     <a href="./information.html">Practical Info</a>
                 </nav>
             </div>
@@ -439,7 +439,7 @@
                     <h3>Accommodations</h3>
                     <p>Hotels, B&Bs & Rentals</p>
                 </a>
-                <a class="quick-link-card" href="./activities">
+                <a class="quick-link-card" href="./activities.html">
                     <h3>Activities</h3>
                     <p>Tours & Experiences</p>
                 </a>
